# FedML

./: .gitignore  Cargo.toml  MobilenetLarge.ipynb  README.md  config.json  dfx.json  malaria_mobilenetSmall.safetensors  malaria_mobilenetv3.safetensors  malaria_multiclass.json  malaria_types2_small.safetensors  malaria_types_small.safetensors  model.ipynb  package-lock.json  package.json  tailwind.config.js  tsconfig.json
.cargo/: config.toml
src/medAIml_backend/: Cargo.toml  medAIml_backend.did
src/medAIml_backend/src/: agent.rs  biogpt.rs  client.rs  client_type.rs  lib.rs  malaria_types.rs  server.rs  storage.rs
src/medAIml_frontend/: index.html  package.json
src/medAIml_frontend/components/: About.jsx  AuthModal.jsx  Camera.jsx  Header.jsx  ImageUpload.jsx  InternetIdentityProvider.jsx  LandingPage.jsx  StarField.jsx  file_upload.jsx
src/medAIml_frontend/contexts/: WalletContext.jsx
src/medAIml_frontend/pages/: Dashboard.jsx  HomePage.jsx  home.jsx  login.jsx  signup.jsx
src/medAIml_frontend/services/: googleAuth.js
src/medAIml_frontend/src/: App.jsx  index.css  index.scss  main.jsx
