[package]
name = "medAIml_backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
candid = "0.10"
csv-async = "1.3.0"
csv-core = "0.1.11"
anyhow = { version="1.0", default-features =false }
ic-cdk = "0.16"
ic-cdk-macros = "0.16"
ic-stable-structures = "0.6.9"
serde = { version = "1.0", features = ["derive"] }
serde-csv-core = "0.3.1"
serde_bytes = "0.11.15"

ic-file-uploader = "0.1.2"
ic-wasi-polyfill = "0.5"
ic-oss-types = "=0.6.6"
ic-oss-can = "0.9.12"
candle-core = "0.9.1"
candle-nn = "0.9.1"
candle-transformers = "0.9.1"
serde_json = "1.0.138"
postcard = "1.1.1"
image = { version="0.25.6", default-features = false, features = ["png", "jpeg"] }
getrandom = { version = "0.2.15", features = ["custom"] }
imp = "0.1.0"
ic-llm = "1.1.0"
once_cell = "1.21.3"
